--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"eslint-plugin-jest": "^23.9.0",
 		"eslint-plugin-prettier": "^3.1.3",
 		"eslint-plugin-react": "^7.19.0",
+		"flush-promises": "^1.0.2",
 		"prettier": "^2.0.5"
 	}
 }
